# suter-proofs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: sigma-bullets.md  sigma-bullets.org
examples/: main.rs
src/: amount.rs  confidential.rs  constants.rs  crypto.rs  elgamal.rs  errors.rs  lib.rs  macros.rs  utils.rs
src/confidential/: mod.rs  tests.rs
