[package]
name = "suter_proofs"
version = "0.1.0"
authors = ["YI <uuuuuu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elgamal_ristretto = { git = "https://github.com/iquerejeta/elgamal.git" }
curve25519-dalek = "2.0.0"
quickcheck = "0.9.0"
rand = "0.7.2"
rand_core = "0.5.1"
quickcheck_macros = "0.8.0"
zkp = "0.7.0"
sha2 = "0.8.1"
serde = "1.0.104"
clear_on_drop = "0.2.3"

[dev-dependencies]
bincode = "1.2.1"
