[package]
name = "suter_proofs"
version = "0.1.0"
authors = ["YI <uuuuuu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elgamal_ristretto = "0.2.1"
curve25519-dalek = "2.0.0"
quickcheck = "0.9.0"
rand = { version = "0.7.2", optional = true }
rand_core = "0.5.1"
quickcheck_macros = "0.8.0"
zkp = "0.7.0"
sha2 = "0.8.1"
serde = "1.0.104"
clear_on_drop = "0.2.3"
bulletproofs = { git = "https://github.com/suterusu-team/bulletproofs.git", rev = "main" }
merlin = "2.0.0"
lazy_static = "1.4.0"
anyhow = "1.0.26"
thiserror = "1.0.10"

[dev-dependencies]
bincode = "1.2.1"
rand_chacha = "0.2.1"

[features]
default = ["std"]
std = ["rand", "rand/std"]
